JEAP-6536 Remove CreateProcessInstanceCommand